Fixed a bunch of (mostly minor) issues identified by analysis.apache.org
git-svn-id: https://svn.apache.org/repos/asf/cxf/branches/2.6.x-fixes@1393517 13f79535-47bb-0310-9956-ffa450edef68